@@ -13,10 +13,9 @@ import org.springframework.http.*;
 import org.springframework.test.util.ReflectionTestUtils;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.List;
+import java.util.Arrays;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -29,7 +28,9 @@ class UserServiceV1Test {
     @InjectMocks
     private UserServiceV1 userServiceV1;
 
-    private final String url = "http://example.com";
+    private String url = "http://example.com";
+    private String validToken = "Bearer validToken";
+    private String invalidToken = "invalidToken";
 
     @BeforeEach
     void setUp() {
@@ -39,27 +40,28 @@ class UserServiceV1Test {
     @Test
     void getUserByToken_ValidToken_ReturnsUserDto() {
         HttpHeaders headers = new HttpHeaders();
-        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
+        headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
         headers.setBearerAuth("validToken");
         HttpEntity<String> entity = new HttpEntity<>(headers);
         UsersDto expectedUserDto = new UsersDto();
         ResponseEntity<UsersDto> responseEntity = new ResponseEntity<>(expectedUserDto, HttpStatus.OK);
-        when(restTemplate.exchange(url, HttpMethod.POST, entity, UsersDto.class)).thenReturn(responseEntity);
+        when(restTemplate.exchange(eq(url), eq(HttpMethod.POST), eq(entity), eq(UsersDto.class))).thenReturn(responseEntity);
 
-        String validToken = "Bearer validToken";
         UsersDto actualUserDto = userServiceV1.getUserByToken(validToken);
 
         assertEquals(expectedUserDto, actualUserDto);
-        verify(restTemplate, times(1)).exchange(url, HttpMethod.POST, entity, UsersDto.class);
+        verify(restTemplate, times(1)).exchange(eq(url), eq(HttpMethod.POST), eq(entity), eq(UsersDto.class));
     }
 
     @Test
     void getUserByToken_InvalidToken_ReturnsNull() {
+        HttpHeaders headers = new HttpHeaders();
+        headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
+        HttpEntity<String> entity = new HttpEntity<>(headers);
 
-        String invalidToken = "invalidToken";
         UsersDto actualUserDto = userServiceV1.getUserByToken(invalidToken);
 
-        assertNull(actualUserDto);
+        assertEquals(null, actualUserDto);
         verify(restTemplate, never()).exchange(anyString(), any(HttpMethod.class), any(HttpEntity.class), eq(UsersDto.class));
     }
 }
